--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -15,7 +15,7 @@
     <string name="open"> Öppna Navigeringslåda</string>
     <string name="close"> Stäng Navigeringslåda</string>
 
-    <string name="send_reset_mail">Skicka återställnings mail</string>
+    <string name="send_reset_mail">Skicka återställningsmail</string>
     <string name="email">Email</string>
     <string name="we_will_send_you_an_e_mail_with_instructions_to_reset_your_password">Vi kommer skicka email till dig med instruktioner för återställning av lösenordet.</string>
     <string name="password_recovery">Återställ Lösenord</string>
@@ -31,9 +31,9 @@
     <string name="language">Språk:</string>
     <string name="full_name">Fullt Namn</string>
     <string name="mobile_number">Mobilnummer</string>
-    <string name="password_re">Re-Password</string>
+    <string name="password_re">Bekräfta-Lösenord</string>
     <string name="phone_number">Telefonnummer</string>
-    <string name="emergency_number">Nödsituations nummer</string>
+    <string name="emergency_number">Nödnummer</string>
     <string name="email_us">Våran Email</string>
     <string name="select_date">Välj Datum</string>
     <string name="edit">Redigera</string>
