--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="select_date">Select the Date</string>
     <string name="edit">Edit</string>
     <string name="address">Address</string>
+    <string name="select">Select A Meal</string>
 </resources>
