Change language now seen updating on the login screen and some more translations

--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">HealthAppY</string>
-    <string name="title_activity_mealmanagment">mealmanagment</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_activity_mealmanagment">Hantera måltid</string>
+    <string name="navigation_drawer_open">Öppna navigeringslåda</string>
+    <string name="navigation_drawer_close">Stäng Navigeringslåda</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Inställningar</string>
 
-    <string name="menu_home">Home</string>
+    <string name="menu_home">Hem</string>
     <string name="menu_gallery">Galleri</string>
     <string name="menu_slideshow">Slideshow</string>
-    <string name="open"> Öppna Navigeringslåda</string>
-    <string name="close"> Stäng Navigeringslåda</string>
+    <string name="open">Öppna Navigeringslåda</string>
+    <string name="close">Stäng Navigeringslåda</string>
 
     <string name="send_reset_mail">Skicka återställningsmail</string>
     <string name="email">Email</string>
@@ -38,4 +38,12 @@
     <string name="select_date">Välj Datum</string>
     <string name="edit">Redigera</string>
     <string name="address">Adress</string>
+    <string name="home">Hem</string>
+    <string name="meal_managment">Hantera Måltid</string>
+    <string name="profile">Profil</string>
+    <string name="profile_settings">Profil Inställningar</string>
+    <string name="log_out">Logga Ut</string>
+    <string name="contact_us">Kontakta oss</string>
+    <string name="call_us">Ring oss</string>
+    <string name="mail_us">Maila oss</string>
 </resources>
