Bloodied teeth, notifications work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,11 @@
     <string name="call_us">Call us</string>
     <string name="mail_us">Mail us</string>
     <string name="select">Select A Meal</string>
+
+    <!-- Notification Stuff-->
+    <string name="permission_request">Permission(s) requried</string>
+    <string name="notif_post_perm">To be able to show you important information outside of the app.</string>
+    <string name="perm_accept">Accept!</string>
+    <string name="perm_deny">Deny!</string>
+
 </resources>
