--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -46,4 +46,10 @@
     <string name="contact_us">Kontakta oss</string>
     <string name="call_us">Ring oss</string>
     <string name="mail_us">Maila oss</string>
+
+    <!-- Notification Stuff-->
+    <string name="permission_request">Appen kräver behörigheter</string>
+    <string name="notif_post_perm">För att kunna visa dig viktig information utanför appen.</string>
+    <string name="perm_accept">Tillåt!</string>
+    <string name="perm_deny">Neka!</string>
 </resources>
