--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,10 +65,17 @@
     <string name="toast_passwords_do_not_match">Passwords do not match!</string>
     <string name="toast_enter_name">Enter a name</string>
     <string name="toast_enter_phone_number">Enter a phone number:</string>
+    <string name="languages">Languages</string>
+    <string name="select_language">Select Language</string>
+    <string name="set_language_to">Set language to:</string>
     <string-array name="meals">
         <item>Breakfast</item>
         <item>Lunch</item>
         <item>Small meal</item>
         <item>Dinner</item>
+    </string-array>
+    <string-array name="langs">
+        <item>English</item>
+        <item>Svenska</item>
     </string-array>
 </resources>
