--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -66,6 +66,7 @@
     <string name="toast_passwords_do_not_match">Lösenord matchar ej!</string>
     <string name="toast_enter_name">Skriv ett namn</string>
     <string name="toast_enter_phone_number">Skriv ett telefonnummer:</string>
+    <string name="select_caretaker">Välj vårdtagare</string>
     <string-array name="meals">
         <item>Frukost</item>
         <item>Lunch</item>
