--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="edit">Edit</string>
     <string name="address">Address</string>
     <string name="home">Home</string>
+    <string name="allergies">Allergies</string>
     <string name="meal_managment">Meal Management</string>
     <string name="profile">Profile</string>
     <string name="profile_settings">Profile Settings</string>
