Spent an entire two days to get a dropdown menu working.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,13 +46,6 @@
     <string name="call_us">Call us</string>
     <string name="mail_us">Mail us</string>
     <string name="select">Select A Meal</string>
-
-    <!-- Notification Stuff-->
-    <string name="permission_request">Permission(s) requried</string>
-    <string name="notif_post_perm">To be able to show you important information outside of the app.</string>
-    <string name="perm_accept">Accept!</string>
-    <string name="perm_deny">Deny!</string>
-
     <string name="enter_day">Enter day, eg: 2023/09/29</string>
     <string name="enter_time">Enter time, eg: 01:02</string>
     <string name="the_food_is">The food is…</string>
@@ -75,6 +68,7 @@
     <string name="languages">Languages</string>
     <string name="select_language">Select Language</string>
     <string name="set_language_to">Set language to:</string>
+    <string name="meal_history">Meal History</string>
     <string-array name="meals">
         <item>Breakfast</item>
         <item>Lunch</item>
@@ -85,4 +79,14 @@
         <item>English</item>
         <item>Svenska</item>
     </string-array>
+
+    <!-- Notification Stuff-->
+    <string name="permission_request">Permission(s) requried</string>
+    <string name="notif_post_perm">To be able to show you important information outside of the app.</string>
+    <string name="perm_accept">Accept!</string>
+    <string name="perm_deny">Deny!</string>
+
+    <!-- FragmentMealHistory -->
+    <string name="select_elderly">Select Elderly</string>
+
 </resources>
