--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -69,13 +69,7 @@
     <string name="languages">Språk</string>
     <string name="select_language">Välj Språk</string>
     <string name="set_language_to">Satte språket till:</string>
-    
-    <!-- Notification Stuff-->
-    <string name="permission_request">Appen kräver behörigheter</string>
-    <string name="notif_post_perm">För att kunna visa dig viktig information utanför appen.</string>
-    <string name="perm_accept">Tillåt!</string>
-    <string name="perm_deny">Neka!</string>
-  
+    <string name="meal_history">Måltidshistorik</string>
     <string-array name="meals">
         <item>Frukost</item>
         <item>Lunch</item>
@@ -86,4 +80,15 @@
         <item>English</item>
         <item>Svenska</item>
     </string-array>
+
+    <!-- Notification Stuff-->
+    <string name="permission_request">Appen kräver behörigheter</string>
+    <string name="notif_post_perm">För att kunna visa dig viktig information utanför appen.</string>
+    <string name="perm_accept">Tillåt!</string>
+    <string name="perm_deny">Neka!</string>
+
+    <!-- FragmentMealHistory -->
+    <string name="select_elderly">Välj Patient</string>
+
+
 </resources>
