meal plan to add meals to Elder in db

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
     <string-array name="meals">
         <item>Breakfast</item>
         <item>Lunch</item>
-        <item>Small meal</item>
+        <item>Snack</item>
         <item>Dinner</item>
     </string-array>
     <string-array name="langs">
