--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -81,6 +81,15 @@
     <string name="enter_elder_username">Ange vårdtagares användarnamn</string>
     <string name="link_elder">Länka äldre</string>
     <string name="get_account_info">Hämta användarinformation</string>
+    <string name="pick_date">Välj datum</string>
+    <string name="about">About the app</string>
+    <string name="save_changes">Save changes</string>
+    <string name="your_password">Your password:</string>
+    <string name="your_number">Your number:</string>
+    <string name="your_email">Your email adress:</string>
+    <string name="your_username">Your username:</string>
+    <string name="basic_account_settings">Change your basic account settings here.</string>
+    <string name="settings">Settings</string>
 
     <string-array name="meals">
         <item>Frukost</item>
