--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,8 +90,8 @@
     <string name="your_username">Your username:</string>
     <string name="basic_account_settings">Change your basic account settings here.</string>
     <string name="settings">Settings</string>
-    <string name="about_text_1">Elder Care is a food diary that was developed by students of Karlstads universitet to aid people with eating disorders..</string>
-    <string name="about_text_2">The app is intended to be a support for you with a current treatment for an eating disorder and have contact with a caretaker..</string>
+    <string name="about_text_1">Elder Care är en matdagbok som skapats och utvecklats av studenter från Karlstads universitet för att stödja personer med ätstörningar..</string>
+    <string name="about_text_2">Appen är avsedd att vara ett stöd för dig som genomgår behandling för en ätstörning och har kontakt med en behandlare..</string>
     <string name="elderly_signup">Elderly SignUp</string>
     <string-array name="meals">
         <item>Breakfast</item>
