created edit_meal and recycle_item_view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,11 @@
     <string name="enter_elder_username">Enter Elder username</string>
     <string name="link_elder">Link Elder</string>
     <string name="get_account_info">Get account info</string>
+    <string name="plan_a_meal">Plan a meal</string>
+    <string name="select_elder">Select Elder</string>
+    <string name="pick_date">Pick date</string>
+    <string name="pick_time">Pick Time</string>
+    <string name="add_meal_comment">Add meal comment...</string>
     <string-array name="meals">
         <item>Breakfast</item>
         <item>Lunch</item>
@@ -91,4 +96,6 @@
         <item>English</item>
         <item>Svenska</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
