--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -81,6 +81,11 @@
     <string name="enter_elder_username">Ange vårdtagares användarnamn</string>
     <string name="link_elder">Länka äldre</string>
     <string name="get_account_info">Hämta användarinformation</string>
+    <string name="plan_a_meal">Planera en måltid</string>
+    <string name="select_elder">Välj åldring</string>
+    <string name="pick_date">Välj datum</string>
+    <string name="pick_time">Välj tid</string>
+    <string name="add_meal_comment">Lägg till kommentar...</string>
 
     <string-array name="meals">
         <item>Frukost</item>
