--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -47,6 +47,7 @@
     <string name="call_us">Ring oss</string>
     <string name="mail_us">Maila oss</string>
     <string name="select">Välj en måltid</string>
+
     <string name="enter_day">Skriv dag, t.ex: 2023/09/29</string>
     <string name="enter_time">Skriv tid, t.ex: 01:02</string>
     <string name="the_food_is">Maträtten är…</string>
@@ -69,12 +70,9 @@
     <string name="languages">Språk</string>
     <string name="select_language">Välj Språk</string>
     <string name="set_language_to">Satte språket till:</string>
-    
-    <!-- Notification Stuff-->
-    <string name="permission_request">Appen kräver behörigheter</string>
-    <string name="notif_post_perm">För att kunna visa dig viktig information utanför appen.</string>
-    <string name="perm_accept">Tillåt!</string>
-    <string name="perm_deny">Neka!</string>
+
+    <string name="meal_history">Meal History</string>
+
     <string name="_4_digit_pin">4-siffrig PIN</string>
     <string name="username">Användarnamn</string>
     <string name="to_apply_yourself_as_garegiver">för att ange dig själv som vårdgivare</string>
@@ -93,6 +91,14 @@
     <string name="about_text_1">Elder Care är en matdagbok som skapats och utvecklats av studenter från Karlstads universitet för att stödja personer med ätstörningar..</string>
     <string name="about_text_2">Appen är avsedd att vara ett stöd för dig som genomgår behandling för en ätstörning och har kontakt med en behandlare..</string>
     <string name="elderly_signup">Gamlings registrering</string>
+    <string name="your_name">Your name:</string>
+    <string name="add_meal_comment">Add meal comment…</string>
+    <string name="pick_time">Pick Time</string>
+    <string name="select_elder">Select Elder</string>
+    <string name="all_the_elderly_deserves_some_care_and_love">All the elderly deserves some care and love</string>
+    <string name="get_started">Get Started</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Avbryt</string>
 
     <string-array name="meals">
         <item>Frukost</item>
@@ -104,4 +110,14 @@
         <item>English</item>
         <item>Svenska</item>
     </string-array>
+
+    <!-- Notification Stuff-->
+    <string name="permission_request">Appen kräver behörigheter</string>
+    <string name="notif_post_perm">För att kunna visa dig viktig information utanför appen.</string>
+    <string name="perm_accept">Tillåt!</string>
+    <string name="perm_deny">Neka!</string>
+
+    <!-- FragmentMealHistory -->
+    <string name="select_elderly">Select Elderly</string>
+
 </resources>
