--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,12 +47,6 @@
     <string name="mail_us">Mail us</string>
     <string name="select">Select A Meal</string>
 
-    <!-- Notification Stuff-->
-    <string name="permission_request">Permission(s) required</string>
-    <string name="notif_post_perm">To be able to show you important information outside of the app.</string>
-    <string name="perm_accept">Accept!</string>
-    <string name="perm_deny">Deny!</string>
-
     <string name="enter_day">Enter day, eg: 2023/09/29</string>
     <string name="enter_time">Enter time, eg: 01:02</string>
     <string name="the_food_is">The food is…</string>
@@ -75,6 +69,9 @@
     <string name="languages">Languages</string>
     <string name="select_language">Select Language</string>
     <string name="set_language_to">Set language to:</string>
+
+    <string name="meal_history">Meal History</string>
+
     <string name="_4_digit_pin">4 digit PIN</string>
     <string name="username">Username</string>
     <string name="to_apply_yourself_as_garegiver">to apply yourself as garegiver</string>
@@ -93,6 +90,14 @@
     <string name="about_text_1">Elder Care är en matdagbok som skapats och utvecklats av studenter från Karlstads universitet för att stödja personer med ätstörningar..</string>
     <string name="about_text_2">Appen är avsedd att vara ett stöd för dig som genomgår behandling för en ätstörning och har kontakt med en behandlare..</string>
     <string name="elderly_signup">Elderly SignUp</string>
+    <string name="your_name">Your name:</string>
+    <string name="add_meal_comment">Add meal comment…</string>
+    <string name="pick_time">Pick Time</string>
+    <string name="select_elder">Select Elder</string>
+    <string name="all_the_elderly_deserves_some_care_and_love">All the elderly deserves some care and love</string>
+    <string name="get_started">Get Started</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
     <string-array name="meals">
         <item>Breakfast</item>
         <item>Lunch</item>
@@ -103,4 +108,14 @@
         <item>English</item>
         <item>Svenska</item>
     </string-array>
+
+    <!-- Notification Stuff-->
+    <string name="permission_request">Permission(s) required</string>
+    <string name="notif_post_perm">To be able to show you important information outside of the app.</string>
+    <string name="perm_accept">Accept!</string>
+    <string name="perm_deny">Deny!</string>
+
+    <!-- FragmentMealHistory -->
+    <string name="select_elderly">Select Elderly</string>
+
 </resources>
