--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -81,6 +81,23 @@
     <string name="enter_elder_username">Ange vårdtagares användarnamn</string>
     <string name="link_elder">Länka äldre</string>
     <string name="get_account_info">Hämta användarinformation</string>
+    <string name="about_the_app">Om appen</string>
+    <string name="pick_date">Välj datum</string>
+    <string name="pick_time">Välj tid</string>
+    <string name="select_elder">Välj Elder</string>
+    <string name="add_meal_comment">Lägg till måltidskommentar...</string>
+    <string name="lol">Health Care är en banbrytande mobilapplikation utvecklad för att möta de specifika behoven för måltidshantering hos den äldre befolkningen. Vi inser att när vi åldras är det avgörande för vårt allmänna välbefinnande att upprätthålla en balanserad kost.</string>
+    <string name="lool">Health Care har utformats noggrant för att ge äldre befolkning den hjälp de behöver för att äta sina måltider effektivt, vilket säkerställer att de kan leda hälsosammare.</string>
+    <string name="helping_you_to_take_good_care_of_your_elderly">Hjälper dig att ta väl hand om dina äldre</string>
+    <string name="all_the_elderly_deserves_some_care_and_love">Alla äldre förtjänar lite omsorg och kärlek</string>
+    <string name="get_started">Komma igång</string>
+    <string name="change_your_basic_account_settings_here">Ändra dina grundläggande kontoinställningar här.</string>
+    <string name="your_username">Ditt användarnamn:</string>
+    <string name="your_email_adress">Din e-postadress:</string>
+    <string name="your_number">Ditt nummer:</string>
+    <string name="your_password">Ditt lösenord:</string>
+    <string name="save_changes">Spara ändringar</string>
+    <string name="settings">inställningar</string>
 
     <string-array name="meals">
         <item>Frukost</item>
