--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,25 @@
     <string name="enter_elder_username">Enter Elder username</string>
     <string name="link_elder">Link Elder</string>
     <string name="get_account_info">Get account info</string>
+    <string name="about_the_app">About the app</string>
+    <string name="pick_date">Pick date</string>
+    <string name="pick_time">Pick Time</string>
+    <string name="select_elder">Select Elder</string>
+    <string name="add_meal_comment">Add meal comment...</string>
+    <string name="lol">Health Care is a cutting-edge mobile application developed to address the specific meal management needs of the elderly population. We recognize that as we age, maintaining a balanced diet is crucial to our overall well-being.</string>
+    <string name="lool">Health Care has been meticulously crafted to provide elderly population the help they need to eat their meals effectively, ensuring they can lead healthier.</string>
+    <string name="helping_you_to_take_good_care_of_your_elderly">Helping you to take good care of your elderly</string>
+    <string name="all_the_elderly_deserves_some_care_and_love">All the elderly deserves some care and love</string>
+    <string name="get_started">Get Started</string>
+    <string name="settings">Settings</string>
+    <string name="change_your_basic_account_settings_here">Change your basic account settings here.</string>
+    <string name="your_username">Your username:</string>
+    <string name="your_email_adress">Your email adress:</string>
+    <string name="your_number">Your number:</string>
+    <string name="your_password">Your password:</string>
+    <string name="save_changes">Save changes</string>
+
+
     <string-array name="meals">
         <item>Breakfast</item>
         <item>Lunch</item>
